# apex

./: .gitignore  0.bootstrap.js  Cargo.toml  LICENSE  Makefile.toml  README.md  bootstrap.js  index.html  rustfmt.toml
apex-client/: Cargo.toml
apex-client/res/: common.wgsl
apex-client/src/: app.rs  input.rs  lib.rs  state.rs
apex-client/src/graphics/: util.rs
apex-client/src/graphics/taiko/: conveyor.rs  mod.rs  model.rs  skin.rs
apex-client/src/layer/: mod.rs  taiko.rs
apex-client/src/taiko/: parser.rs
apex-client/src/view/: menu.rs  sidebar.rs
apex-client/src/view/window/: controls.rs  file_dialog.rs  mod.rs  timeline.rs
crates/apex-client/: Cargo.toml
crates/apex-client/src/: apex.rs  lib.rs  main.rs  wasm.rs
crates/apex-client/src/client/: client.rs  event.rs  mod.rs  state.rs
crates/apex-client/src/client/action/: action.rs  back.rs  clear_query.rs  debug.rs  mod.rs  next.rs  prev.rs  recording.rs  retry.rs  select.rs  settings.rs  skip.rs  taiko.rs
crates/apex-client/src/client/action/actions/: back.rs  mod.rs  next.rs  prev.rs  recording.rs  retry.rs  select.rs  settings.rs  taiko.rs
crates/apex-client/src/client/audio/: game_audio.rs  mod.rs
crates/apex-client/src/client/gameplay/: beatmap.rs  beatmap_audio.rs  beatmap_cache.rs  beatmap_selector.rs  mod.rs  score_processor.rs  taiko_hit_object.rs  taiko_player.rs
crates/apex-client/src/client/graphics/: frame_limiter.rs  frame_sync.rs  mod.rs
crates/apex-client/src/client/graphics/taiko_renderer/: hit_object_model.rs  mod.rs  taiko_renderer.rs  taiko_shader.wgsl
crates/apex-client/src/client/graphics/taiko_video_exporter/: mod.rs
crates/apex-client/src/client/gui/: mod.rs
crates/apex-client/src/client/gui/beatmap_list/: beatmap_card.rs  beatmap_list_view.rs
crates/apex-client/src/client/gui/ingame_overlay/: ingame_overlay_view.rs
crates/apex-client/src/client/input/: client_action.rs  mod.rs
crates/apex-client/src/client/score/: grades.rs  judgement_processor.rs  mod.rs  score.rs  score_cache.rs  score_processor.rs
crates/apex-client/src/client/screen/: mod.rs
crates/apex-client/src/client/screen/debug_screen/: debug_screen.rs  mod.rs
crates/apex-client/src/client/screen/gameplay_screen/: gameplay_playback_controller.rs  gameplay_screen.rs  hit_drum_display.rs  hit_result_display.rs  mod.rs
crates/apex-client/src/client/screen/pause_screen/: mod.rs  pause_screen.rs
crates/apex-client/src/client/screen/recording_screen/: mod.rs  recording_screen.rs
crates/apex-client/src/client/screen/result_screen/: mod.rs  result_screen.rs
crates/apex-client/src/client/screen/selection_screen/: mod.rs  selection_screen.rs
crates/apex-client/src/client/screen/settings_screen/: mod.rs  settings_screen.rs
crates/apex-client/src/client/screen/volume_screen/: mod.rs
crates/apex-client/src/client/settings/: graphics.rs  mod.rs  proxy.rs  settings.rs  ui.rs
crates/apex-client/src/client/settings/groups/: audio.rs  gameplay.rs  graphics.rs  interface.rs  mod.rs  profile.rs  taiko.rs
crates/apex-client/src/client/state/: gameplay_state.rs  graphics_state.rs  mod.rs  taiko_state.rs
crates/apex-client/src/client/taiko/: beatmap.rs  beatmap_cache.rs  hit_object.rs  mod.rs
crates/apex-client/src/client/ui/: background_component.rs  card.rs  card_component.rs  mod.rs
crates/apex-client/src/client/ui/beatmap_list/: beatmap_card.rs  beatmap_list_view.rs  mod.rs
crates/apex-client/src/client/ui/beatmap_selection/: action_bar.rs  beatmap_background.rs  beatmap_card.rs  beatmap_list.rs  beatmap_preview.rs  beatmap_scores.rs  beatmap_selection_view.rs  beatmap_stats.rs  mod.rs
crates/apex-client/src/client/ui/break_overlay/: mod.rs
crates/apex-client/src/client/ui/game_settings/: mod.rs  tab_controls.rs  tab_general.rs
crates/apex-client/src/client/ui/ingame_overlay/: delta_bar.rs  ingame_overlay_view.rs  mod.rs
crates/apex-client/src/client/util/: beatmap_audio.rs  beatmap_selector.rs  frame_limiter.rs  mod.rs  playback_controller.rs
crates/apex-client/src/core/: app.rs  core.rs  event.rs  mod.rs
crates/apex-client/src/core/audio/: audio_engine.rs  audio_mixer.rs  lead_in.rs  mod.rs
crates/apex-client/src/core/data/: mod.rs  persistant.rs  settings.rs
crates/apex-client/src/core/graphics/: bindable.rs  camera.rs  color.rs  drawable.rs  egui.rs  graphics.rs  instance.rs  mod.rs  scene.rs  texture.rs  uniform.rs
crates/apex-client/src/core/graphics/egui/: mod.rs  (+1 more)
crates/apex-client/src/core/input/: action.rs  bind.rs  input_state.rs  keybinds.rs  mod.rs
crates/apex-client/src/core/time/: clock.rs  mod.rs  time.rs
crates/apex-client/web/: package.json  pnpm-lock.yaml  vite.config.js
crates/apex-client/web/src/: index.html  index.js
crates/apex-framework/: Cargo.toml
crates/apex-framework/src/: app.rs  core.rs  event.rs  lib.rs  log.rs  util.rs
crates/apex-framework/src/audio/: arc_buffer.rs  audio_engine.rs  audio_mixer.rs  frameless_source.rs  mod.rs
crates/apex-framework/src/data/: persistent.rs  settings.rs
crates/apex-framework/src/graphics/: camera.rs  color.rs  drawable.rs  graphics.rs  instance.rs  layout.rs  mod.rs  origin.rs  quad_vertex.rs  scene.rs  texture.rs  uniform.rs
crates/apex-framework/src/graphics/egui/: image_loader.rs  mod.rs
crates/apex-framework/src/graphics/framebuffer/: framebuffer.rs  framebuffer.wgsl
crates/apex-framework/src/graphics/presentation/: frame_limiter.rs  frame_sync.rs  mod.rs
crates/apex-framework/src/graphics/quad_renderer/: mod.rs  quad_renderer.rs  quad_shader.wgsl
crates/apex-framework/src/graphics/sprite_renderer/: mod.rs  sprite_model.rs  sprite_renderer.rs  sprite_shader.wgsl
crates/apex-framework/src/graphics/video_exporter/: mod.rs
crates/apex-framework/src/input/: action.rs  input_state.rs  keybinds.rs  mod.rs
crates/apex-framework/src/time/: mod.rs  time.rs
wcore/: Cargo.toml
wcore/src/: binds.rs  clock.rs  color.rs  lib.rs  time.rs
wcore/src/graphics/: bindable.rs  context.rs  layer.rs  layout.rs  mod.rs  scene.rs  texture.rs  uniform.rs
wcore/src/graphics/common/: model.rs
(+23 files in other folders)
