[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy]
needless_return = "allow"
redundant_field_names = "allow"
new_without_default = "allow"
module_inception = "allow"
single_match = "allow"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev]
opt-level = 1
lto = "off"
codegen-units = 256
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false
