[package]
name = "apex-client"
version = "0.1.0"
edition = "2021"

# Native
[dependencies]
tap = "1.0.1"
cfg-if = "1"
pollster = "0.3.0"
winit = "0.28.3"
wgpu = "0.15.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
clap = { version = "4.2.2", features = ["derive"] }
egui = "0.21.0"
egui_file = "0.8.0"
rfd = { version = "0.11.3", features = ["xdg-portal"], default-features = false }
bytemuck = { version = "1.13.1", features = ["derive"] }
async_zip = { version = "0.0.13", features = ["full-wasm"] }
cgmath = { git = "https://github.com/rustgd/cgmath.git", features = ["bytemuck"] }
wcore = { path = "../wcore" }

# WASM
[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.15.1", features = ["webgl"]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Window",
    "Element",
]}
