[package]
name = "apex-client"
version = "0.1.0"
edition = "2021"

# Native
[dependencies]
tap = "1.0.1"
cfg-if = "1"
pollster = "0.3.0"
winit = "0.28.5"
wgpu = "0.15.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
clap = { version = "4.3.0", features = ["derive"] }
egui = "0.21.0"
egui_extras = "0.21.0"
egui_file = "0.8.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
async_zip = { version = "0.0.15", features = ["full-wasm"] }
cgmath = { git = "https://github.com/rustgd/cgmath.git", features = ["bytemuck"] }
wcore = { path = "../wcore" }
intbits = "0.2.0"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

# WASM
[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.15.1", features = ["webgl"]}
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Window",
    "Element",
]}
