[package]
name = "apex-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
color-eyre = "0.6.3"

cfg-if = "1.0.0"
tap = "1.0.1"
kiam = "0.1.1"

wgpu = "0.19.4"
winit = "0.29.15"
egui-wgpu = "0.27.2"
egui-winit = { version = "0.27.2", default-features = false }
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
egui = "0.27.2"
rodio = "0.18.0"

pollster = { version = "0.3.0", features = ["macro"] }

intbits = "0.2.0"
bytemuck = "1.15.0"
serde = { version = "1.0.203", features = ["derive"] }
image = { version = "*", features = ["jpeg", "png"] }
glam = { version = "0.27.0", features = ["bytemuck", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
instant = "0.1.12"

fxhash = "0.2.1"
indexmap = "2.2.6"

nucleo = "0.5.0"

rosu-pp = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}

[features]
default = ["native"]

native = [
  "egui-winit/links",
  "egui-winit/wayland",
  "egui-winit/x11",
]

wasm = [
  "instant/wasm-bindgen",
  "wgpu/webgl",
]
