[package]
name = "apex-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
apex-framework = { path = "../apex-framework" }

# OS
atty = "0.2.14"
mimalloc = { version = "0.1.43", optional = true }

# Logging
log = "0.4.22"
pretty_env_logger = "0.5.0"
color-eyre = "0.6.3"

# Utility
paste = "1.0.15"
cfg-if = "1.0.0"
tap = "1.0.1"

# Graphics
wgpu = "22.1.0"
winit = { version = "0.30.2", features = ["serde"] }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "d856f7b" }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "d856f7b", default-features = false }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "d856f7b", features = ["file"] }
egui = { git = "https://github.com/emilk/egui.git", rev = "d856f7b", features = ["rayon"]}

# Audio
rodio = "0.19.0"

# Threading
parking_lot = "0.12.3"

# Async
pollster = { version = "0.3.0", features = ["macro"] }

# Data Manipulation
intbits = "0.2.0"
bytemuck = "1.16.3"
toml = "0.8.19"
serde = { version = "1.0.204", features = ["derive"] }
image = { version = "0.25.2", features = ["jpeg", "png"] }
zip = "2.1.6"

# Maths, Time
glam = { version = "0.28.0", features = ["bytemuck", "serde"] }
jiff = "0.1.4"
instant = "0.1.12"

# Data Structures
ahash = "0.8.11"
nohash-hasher = "0.2.0"
dashmap = "6.0.1"
indexmap = "2.3.0"
triomphe = "0.1.13"

# Database
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Algorithms
nucleo = "0.5.0"

# Formatting
bytesize = "1.3.0"
timeago = "0.4.2"

# Game-specific
rosu-pp = "1.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
display-link = { git = "https://github.com/BrainiumLLC/display-link", rev = "3278013" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}

[features]
default = ["native", "mimalloc"]

mimalloc = ["dep:mimalloc"]

native = [
  "wgpu/angle",
  "wgpu/vulkan-portability",
  "egui-winit/links",
  "egui-winit/wayland",
  "egui-winit/x11",
]

wasm = [
  "instant/wasm-bindgen",
  "wgpu/webgl",
]
