[package]
name = "apex-framework"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# OS
atty = "0.2.14"

# Logging
log = "0.4.22"
pretty_env_logger = "0.5.0"
color-eyre = "0.6.3"

# Utility
paste = "1.0.15"
macro_rules_attribute = "0.2.0"
smart-default = "0.7.1"
cfg-if = "1.0.0"
tap = "1.0.1"

# Graphics
wgpu = "22.1.0"
winit = { version = "0.30.5", features = ["serde"] }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "9a1e358" }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "9a1e358", default-features = false }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "9a1e358", features = ["file"] }
egui = { git = "https://github.com/emilk/egui.git", rev = "9a1e358", features = ["rayon"]}
guillotiere = "0.6.2"

# Audio
rodio = "0.19.0"

# Threading
parking_lot = "0.12.3"

# Async
pollster = { version = "0.3.0", features = ["macro"] }

# Data Manipulation
intbits = "0.2.0"
bytemuck = "1.17.0"
toml = "0.8.19"
serde = { version = "1.0.208", features = ["derive"] }
image = { version = "0.25.2", features = ["jpeg", "png"] }
zip = "2.2.0"

# Maths, Time
glam = { version = "0.29.0", features = ["bytemuck", "serde"] }
num-traits = "0.2.19"
jiff = "0.1.8"
instant = "0.1.12"

# Data Structures
ahash = "0.8.11"
nohash-hasher = "0.2.0"
dashmap = "6.0.1"
indexmap = "2.4.0"
triomphe = "0.1.13"

# Database
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Algorithms
nucleo = "0.5.0"

# Formatting
bytesize = "1.3.0"
timeago = "0.4.2"

# Game-specific
rosu-pp = "1.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
display-link = { git = "https://github.com/BrainiumLLC/display-link", rev = "3278013" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}

[features]
default = ["native"]

native = [
  "wgpu/angle",
  "wgpu/vulkan-portability",
  "egui-winit/links",
  "egui-winit/wayland",
  "egui-winit/x11",
]

wasm = [
  "instant/wasm-bindgen",
  "wgpu/webgl",
]
