[package]
name = "apex-framework"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# Logging, Error Handling
log = "0.4.22"
thiserror = "1.0.63"

# Utility
paste = "1.0.15"
smart-default = "0.7.1"
cfg-if = "1.0.0"
tap = "1.0.1"
nz = "0.4.1"

# Graphics
wgpu = "22.1.0"
winit = { version = "0.30.5", features = ["serde"] }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "06f7094" }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "06f7094", default-features = false }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "06f7094", features = ["serde", "file" ], default-features = false  }
egui = { git = "https://github.com/emilk/egui.git", rev = "06f7094", features = ["rayon"]}
guillotiere = "0.6.2"

# Audio
rodio = "0.19.0"

# Threading
parking_lot = "0.12.3"

# Data Manipulation
bytemuck = "1.18.0"
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
image = { version = "0.25.2", features = ["jpeg", "png"] }

# Maths, Time
glam = { version = "0.29.0", features = ["bytemuck", "serde"] }
num-traits = "0.2.19"
instant = "0.1.12"

# Data Structures
ahash = "0.8.11"
dashmap = "6.0.1"
triomphe = "0.1.13"

[target.'cfg(target_os = "macos")'.dependencies]
display-link = { git = "https://github.com/BrainiumLLC/display-link", rev = "3278013" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}

[features]
default = ["native"]

native = [
  "wgpu/angle",
  "wgpu/vulkan-portability",
  "egui-winit/links",
  "egui-winit/wayland",
  "egui-winit/x11",
]

wasm = [
  "instant/wasm-bindgen",
  "wgpu/webgl",
]
